# code-agent-mcp

./: .gitignore  M2_MCP_SERVER.md  README.ko.md  README.md  mcp_config.json  pyproject.toml  pytest.ini  requirements.txt  test_mcp.py
docs/: CLAUDE_CODE_SETUP.md  CLAUDE_DESKTOP_SETUP.ko.md  CLAUDE_DESKTOP_SETUP.md  MCP_SERVER_GUIDE.ko.md  MCP_SERVER_GUIDE.md
examples/: claude_code_integration.py  langgraph_integration.py
src/: __init__.py  api_client.py  config.py  server.py
tests/: conftest.py  test_e2e_mcp.py  test_mcp_server.py
